add the path for innvotaion lab page

--- a/app/views/shared/_nav_links.html.erb
+++ b/app/views/shared/_nav_links.html.erb
@@ -4,7 +4,7 @@
   </a>
   <ul class="dropdown-menu">
     <li><a class="dropdown-item" href="<%= aboutt_path %>">About Us</a></li>
-    <li><a class="dropdown-item" href="#">Innovation Lab</a></li>
+    <li><a class="dropdown-item" href="<%= innotaionlab_path %>">Innovation Lab</a></li>  
   </ul>
 </li>
 
