add the path for innvotaion lab page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -295,7 +295,7 @@ Our team transform your vision into reality, guiding you from concept to deploym
 
 <div class="button-container">
 
-  <a href="#" class="btn btn-outline-dark-red btn-rounded"style="background-color:#FFFFF2 !important; color:#19180A !important ;  border-color: #19180A !important;">Innovation Lab</a>
+  <a href="<%= innotaionlab_path %>" class="btn btn-outline-dark-red btn-rounded"style="background-color:#FFFFF2 !important; color:#19180A !important ;  border-color: #19180A !important;">Innovation Lab</a>
 </div>
 <div class="login-link-wrapper" style="background-color:#53131E"> 
 <div class="login-link">
